--- a/index1.css
+++ b/index1.css
@@ -49,7 +49,7 @@
     border: 1px solid #ccc;
   }
   
-  .btn {
+  /* .btn {
     display: block;
     width: 100%;
     padding: 10px 15px;
@@ -58,7 +58,7 @@
     color: #fff;
     border-radius: 5px;
     margin: 5px 0;
-  }
+  } */
   
   .btn:hover {
     background: #444;
